--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": " node_modules/.bin/sequelize  db:migrate && node --require babel-register  index.js",
     "dev": "NODE_ENV=development nodemon --require babel-register index.js",
-    "migrate": "node_modules/.bin/sequelize db:migrate"
+    "migrate": "node_modules/.bin/sequelize db:migrate",
+    "test": "NODE_ENV=test nyc --reporter=html --reporter=text --timeout=1500 mocha   --require babel-register src/test/* --exit"
   },
   "repository": {
     "type": "git",
@@ -22,7 +23,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.18.3",
+    "body-parser": "^1.19.0",
     "cloudinary": "^1.14.0",
     "cors": "^2.8.5",
     "dotenv": "^6.0.0",
@@ -56,18 +57,22 @@
     "sequelize-cli": "^5.4.0",
     "swagger-ui-express": "^4.0.2",
     "underscore": "^1.9.1",
-    "zombie": "^6.1.4"
+    "zombie": "^6.1.4",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0"
   },
   "devDependencies": {
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
+    "coveralls": "^3.0.3",
     "eslint": "^5.3.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
-    "nock": "^10.0.6",
-    "nodemon": "^1.18.10"
+    "mocha": "^6.2.1",
+    "nodemon": "^1.18.10",
+    "nyc": "^14.1.1"
   }
 }
